syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract;

// Classes System Definitions

message Student {
  string studentId = 1;
  string studentName = 2;
}

message ClassState {
  int32 capacity = 1;
  bool openEnrollments = 2;
  repeated Student enrolled = 3;
  repeated Student discarded = 4;
}

message LogRecord {
  string id = 1;
  map<string, int32> timestamp = 2;
  Update update = 3;
}

message Update {
  string operationName = 1;
  repeated string arguments = 2;
  map<string, int32> timestamp = 3;
}


enum ResponseCode {
  OK = 0;
  NON_EXISTING_STUDENT = 1;
  FULL_CLASS = 2;
  STUDENT_ALREADY_ENROLLED = 3;
  ENROLLMENTS_ALREADY_OPENED = 4;
  ENROLLMENTS_ALREADY_CLOSED = 5;
  INACTIVE_SERVER = 6;
  WRITING_NOT_SUPPORTED = 7;
  UPDATE_ISSUED = 8;
}
